Sat Jan  5 07:36:43 2008  Minero Aoki  <aamine@loveruby.net>

	* test/cast2.cb: test cast from long* to int*.

	* test/test.sh: change result.

Sat Jan  5 07:33:06 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (DereferenceNode): reduce compileLHS call.

	* test/pointer4.cb: test derefering AddressNode.

	* test/test.sh: run it.

Sat Jan  5 07:21:18 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java (compileLHS):
	  support CastNode.

	* net/loveruby/cflat/compiler/TypeChecker.java: do not warn
	  incompatible cast, if it is castable.

	* net/loveruby/cflat/type/IntegerType.java (isCastable): allow
	  array.

	* net/loveruby/cflat/type/Type.java (isCastable): use isCompatible
	  for default implementation.

	* net/loveruby/cflat/type/PointerType.java: forgot to add
	  #isCompatible.

	* net/loveruby/cflat/type/PointerType.java: forgot to add
	  #isCastable.

	* net/loveruby/cflat/type/PointerType.java (equals): reject type
	  alias by using instanceof.

	* net/loveruby/cflat/ast/CastNode.java: forward #isAssignable to
	  base expr.

	* test/cast2.cb: test cast of pointer.

	* test/Makefile: build it.

	* test/test.sh: test it.

Sat Jan  5 06:51:34 2008  Minero Aoki  <aamine@loveruby.net>

	* test/pointer2.cb: test multiple level of pointer.

	* test/array-semcheck2.cb -> array2.cb.

	* test/pointer-semcheck1.cb -> pointer3.cb.

	* test/Makefile: follow them.

	* test/test.sh: ditto.

Sat Jan  5 06:36:44 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: reject invalid RHS
	  type explicitly.

	* net/loveruby/cflat/compiler/TypeChecker.java: reject void
	  paramters.

	* net/loveruby/cflat/compiler/TypeChecker.java: allow all type of
	  arrays for RHS.

	* net/loveruby/cflat/compiler/CodeGenerator.java (variableNode):
	  generate address for allocated array on RHS.

	* net/loveruby/cflat/compiler/CodeGenerator.java (ArefNode):